--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,7 @@
 
 <body>
   <div class="main-layer main-layer-background">
-    <div id="reactroot">
-      <div class="main-layer main-layer-opacity">
-      </div>
-    </div>
+    <div id="reactroot" />
     <span class="main-layer-copyright">
       @uncover 2023
     </span>
