--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link rel="icon" href="./favicon.png">
 
   <title>AP Mozaic</title>
 
@@ -18,12 +19,7 @@
 </head>
 
 <body>
-  <div class="main-layer main-layer-background">
-    <div id="reactroot" />
-    <span class="main-layer-copyright">
-      @uncover 2023
-    </span>
-  </div>
+  <div id="reactroot" />
 </body>
 
 </html>
